--- a/apps/templates/bookmodule/index.html
+++ b/apps/templates/bookmodule/index.html
@@ -1,1 +1,62 @@
-<h1>Hello from {{ name }}!</h1>
+
+{% extends "layouts/base.html" %}
+{% load static %}
+
+{% block title %} My First Index HTML Page {% endblock title %}
+
+{% block content %}
+  <h1 style="color: blue;">This is heading 1 (Library)</h1>
+  <p style="color: white;background-color: black;">This is a paragraph text </p>
+  <a href="https://www.w3schools.com/html/default.asp">Click Here to learn more about HTML & CSS</a>
+  <hr>
+  <h2>This is heading 2</h2>
+  <p>This is some other text. <br/> with newline <br/> and another line</p>
+  <hr>
+  <h2>This is heading 2</h2>
+  <p>This is some other text.</p>
+{% endblock content %}
+
+
+
+
+<!-- {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <title>My First Index HTML Page</title>
+ <meta name="keywords" content="Books, recent, Learning, library">
+ <meta name="description" content="Books website">
+ <meta name="author" content="author name">
+  <style>
+    p { 
+        font-family: verdana;
+         font-size: 20px;
+        color: green;
+    }
+  </style>
+
+ <link rel="icon" href="{% static 'qu-icon.png' %}">
+<link rel="stylesheet" href="{% static 'styles.css' %}">
+
+ <meta charset="UTF-8">
+</head>
+<body>
+<div class="topnav">
+  <a class="active" href="{% url 'books.index' %}">Home</a>
+  <a href="{% url 'books.list_books' %}">List Books</a>
+  <a href="{% url 'books.aboutus' %}">About</a>
+</div>
+
+<h1 style="color: red;">This is heading 1 (Library)</h1>
+<p style="color: white;background-color: black;">This is a paragraph text</p>
+ <a href="https://www.w3schools.com/html/default.asp">Learn more about HTML</a>
+ <hr>
+ <h2>This is heading 2</h2>
+ <p>This is some other text. <br> with newline <br> and another line</p>
+ <hr>
+
+ <h2>This is heading 2</h2>
+ <p>This is some other text.</p>
+</body>
+</html> -->
+
